Minor update to Rig Pages
Added Download for SLACME

Added Link to SLACME Changelog

Moved changelogs to a new Directory
> old "assets/misc/*"
> new "assets/text/*"

Fixed CSS Issues

Added JS Function
> openText(url)

Fixed Attribute in "sacr-rig.html"

Updated main_style.css

--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -11,10 +11,16 @@ body {
 /* line 16, main_style.scss */
 .links {
   color: pink;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-/* line 22, main_style.scss */
+/* line 20, main_style.scss */
+.links:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* line 25, main_style.scss */
 rigs-dropdown[id="rdp"] {
   width: 100%;
   display: flex;
@@ -24,7 +30,7 @@ rigs-dropdown[id="rdp"] {
   overflow: hidden;
   transition: 500ms;
 }
-/* line 31, main_style.scss */
+/* line 34, main_style.scss */
 rigs-dropdown[id="rdp"] .close-rdp {
   position: absolute;
   color: white;
@@ -35,7 +41,7 @@ rigs-dropdown[id="rdp"] .close-rdp {
   opacity: 0;
   transition: 500ms;
 }
-/* line 42, main_style.scss */
+/* line 45, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp {
   flex-basis: 50%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -43,25 +49,25 @@ rigs-dropdown[id="rdp"] .rdp {
   transition: 500ms;
   background-size: 115%;
 }
-/* line 49, main_style.scss */
+/* line 52, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .material-icons.md-36 {
   font-size: 36px;
 }
-/* line 53, main_style.scss */
+/* line 56, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-title {
   text-align: center;
   color: white;
   font-family: Minecraft;
   height: 100%;
 }
-/* line 60, main_style.scss */
+/* line 63, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-title h2 {
   position: relative;
   top: 0in;
   opacity: 0;
   transition: 500ms;
 }
-/* line 68, main_style.scss */
+/* line 71, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-btn {
   position: relative;
   top: 1.2in;
@@ -75,34 +81,34 @@ rigs-dropdown[id="rdp"] .rdp .rdp-btn {
   cursor: pointer;
   border-radius: 15px;
 }
-/* line 81, main_style.scss */
+/* line 84, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-btn:hover {
   background-color: white;
   border-radius: 3px;
   color: black;
 }
-/* line 87, main_style.scss */
+/* line 90, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .opacity-100 {
   opacity: 100%;
 }
-/* line 92, main_style.scss */
+/* line 95, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp:hover {
   background-color: rgba(0, 0, 0, 0.5);
   background-size: 125%;
 }
 
-/* line 99, main_style.scss */
+/* line 102, main_style.scss */
 .header-contain {
   width: 100%;
   height: 4in;
   background-size: cover;
 }
-/* line 105, main_style.scss */
+/* line 108, main_style.scss */
 .header-contain .navigation {
   height: 32px;
   display: flex;
 }
-/* line 110, main_style.scss */
+/* line 113, main_style.scss */
 .header-contain .navigation .nav-logo {
   display: flex;
   flex-basis: 50%;
@@ -110,12 +116,12 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   height: 47px;
   position: absolute;
 }
-/* line 117, main_style.scss */
+/* line 120, main_style.scss */
 .header-contain .navigation .nav-logo .logoIco {
   width: 47px;
   content: url("https://sakura-sedaia.com/assets/images/Favicon/favicon-32x32.png");
 }
-/* line 122, main_style.scss */
+/* line 125, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt {
   padding-left: 10px;
   overflow-y: hidden;
@@ -129,12 +135,12 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   padding-right: 20px;
   width: 140px;
 }
-/* line 135, main_style.scss */
+/* line 138, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt span {
   position: absolute;
   transform: translateY(2px);
 }
-/* line 143, main_style.scss */
+/* line 146, main_style.scss */
 .header-contain .navigation .nav-contain {
   display: flex;
   width: 50vw;
@@ -142,7 +148,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   right: 0;
   position: absolute;
 }
-/* line 152, main_style.scss */
+/* line 155, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item {
   flex-basis: 25%;
   border-bottom: 5px solid rgba(255, 255, 255, 0);
@@ -157,14 +163,14 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: "Noto Sans JP";
   font-size: 16px;
 }
-/* line 166, main_style.scss */
+/* line 169, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item[active="true"] {
   border-bottom: 5px solid;
   background-color: white;
   color: black;
   border-color: pink;
 }
-/* line 172, main_style.scss */
+/* line 175, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item:hover {
   border-bottom: 5px solid pink;
   flex-basis: 25%;
@@ -172,26 +178,26 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   padding-top: 10px;
   background-color: rgba(25, 25, 25, 0.5);
 }
-/* line 184, main_style.scss */
+/* line 187, main_style.scss */
 .header-contain .header-text {
   position: absolute;
   transform: translateY(1in);
 }
-/* line 188, main_style.scss */
+/* line 191, main_style.scss */
 .header-contain .header-text h1 {
   font-family: PT_Sans;
   font-weight: bold;
   color: #fff5f5;
   text-indent: 1in;
 }
-/* line 194, main_style.scss */
+/* line 197, main_style.scss */
 .header-contain .header-text h4 {
   color: #fff5f5;
   font-family: Minecraft;
   text-indent: 0.75in;
 }
 
-/* line 202, main_style.scss */
+/* line 205, main_style.scss */
 .xmasCounter {
   border-top: 2px solid grey;
   border-bottom: 2px solid grey;
@@ -199,7 +205,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   background-color: #dfdfdf;
 }
 
-/* line 209, main_style.scss */
+/* line 212, main_style.scss */
 .dev-warning {
   border-top: 2px solid #fff022;
   border-bottom: 2px solid #fff022;
@@ -208,12 +214,12 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: black;
   font-family: "Open Sans";
 }
-/* line 217, main_style.scss */
+/* line 220, main_style.scss */
 .dev-warning strong {
   font-family: "Noto Sans JP";
 }
 
-/* line 221, main_style.scss */
+/* line 224, main_style.scss */
 .deprication-warning {
   border-top: 2px solid #ff2222;
   border-bottom: 2px solid #ff2222;
@@ -222,26 +228,26 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: white;
   font-family: "Open Sans";
 }
-/* line 229, main_style.scss */
+/* line 232, main_style.scss */
 .deprication-warning strong {
   font-family: "Noto Sans JP";
 }
 
-/* line 237, main_style.scss */
+/* line 240, main_style.scss */
 .index-content-section .about .title {
   font-size: 20px;
 }
-/* line 240, main_style.scss */
+/* line 243, main_style.scss */
 .index-content-section .about p {
   font-size: 14px;
 }
 
-/* line 249, main_style.scss */
+/* line 252, main_style.scss */
 .about-sacr .title-sacr {
   width: 100%;
   height: 100%;
 }
-/* line 253, main_style.scss */
+/* line 256, main_style.scss */
 .about-sacr .title-sacr .title-text {
   position: absolute;
   z-index: 0;
@@ -251,19 +257,19 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   border-radius: 10px;
   background-color: #00000090;
 }
-/* line 262, main_style.scss */
+/* line 265, main_style.scss */
 .about-sacr .title-sacr .title-text h1 {
   font-family: PT_Sans;
   text-indent: 1in;
   color: white;
 }
-/* line 267, main_style.scss */
+/* line 270, main_style.scss */
 .about-sacr .title-sacr .title-text h3 {
   font-family: Minecraft;
   font-size: 16px;
   color: white;
 }
-/* line 274, main_style.scss */
+/* line 277, main_style.scss */
 .about-sacr .title-sacr .title-bg {
   content: inherit;
   background-color: #fff5f525;
@@ -275,7 +281,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   background-position: 0in -2.5in;
 }
 
-/* line 288, main_style.scss */
+/* line 291, main_style.scss */
 .rig-download-section {
   height: 2in;
   background-color: #333;
@@ -284,15 +290,15 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: #fff5f5;
   display: flex;
 }
-/* line 296, main_style.scss */
+/* line 299, main_style.scss */
 .rig-download-section h1 {
   font-family: PT_Sans;
 }
-/* line 299, main_style.scss */
+/* line 302, main_style.scss */
 .rig-download-section span {
   font-family: "Roboto";
 }
-/* line 303, main_style.scss */
+/* line 306, main_style.scss */
 .rig-download-section .download-lr {
   background-color: transparent;
   border: none;
@@ -323,60 +329,60 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 335, main_style.scss */
+/* line 338, main_style.scss */
 .rig-download-section .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 340, main_style.scss */
+/* line 343, main_style.scss */
 .rig-download-section .download-extra {
   text-decoration: none;
 }
-/* line 343, main_style.scss */
+/* line 346, main_style.scss */
 .rig-download-section .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 347, main_style.scss */
+/* line 350, main_style.scss */
 .rig-download-section .rds-col {
   flex-basis: 50%;
 }
-/* line 350, main_style.scss */
+/* line 353, main_style.scss */
 .rig-download-section .rds-col img {
   position: relative;
   transform: translateY(-15%);
 }
-/* line 355, main_style.scss */
+/* line 358, main_style.scss */
 .rig-download-section .rds-background {
   flex-basis: 25%;
   min-width: 600px;
 }
 
-/* line 362, main_style.scss */
+/* line 366, main_style.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 366, main_style.scss */
+/* line 370, main_style.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 372, main_style.scss */
+/* line 376, main_style.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 377, main_style.scss */
+/* line 381, main_style.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 382, main_style.scss */
+/* line 386, main_style.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
