--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -219,7 +219,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: "Noto Sans JP";
 }
 
-/* line 224, main_style.scss */
+/* line 225, main_style.scss */
 .deprication-warning {
   border-top: 2px solid #ff2222;
   border-bottom: 2px solid #ff2222;
@@ -228,26 +228,31 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: white;
   font-family: "Open Sans";
 }
-/* line 232, main_style.scss */
+/* line 233, main_style.scss */
 .deprication-warning strong {
   font-family: "Noto Sans JP";
 }
 
-/* line 240, main_style.scss */
+/* line 241, main_style.scss */
 .index-content-section .about .title {
   font-size: 20px;
 }
-/* line 243, main_style.scss */
+/* line 244, main_style.scss */
 .index-content-section .about p {
   font-size: 14px;
 }
+/* line 249, main_style.scss */
+.index-content-section .updates {
+  /* Unused Stuff */
+  content: none;
+}
 
-/* line 252, main_style.scss */
+/* line 258, main_style.scss */
 .about-sacr .title-sacr {
   width: 100%;
   height: 100%;
 }
-/* line 256, main_style.scss */
+/* line 262, main_style.scss */
 .about-sacr .title-sacr .title-text {
   position: absolute;
   z-index: 0;
@@ -257,19 +262,19 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   border-radius: 10px;
   background-color: #00000090;
 }
-/* line 265, main_style.scss */
+/* line 271, main_style.scss */
 .about-sacr .title-sacr .title-text h1 {
   font-family: PT_Sans;
   text-indent: 1in;
   color: white;
 }
-/* line 270, main_style.scss */
+/* line 276, main_style.scss */
 .about-sacr .title-sacr .title-text h3 {
   font-family: Minecraft;
   font-size: 16px;
   color: white;
 }
-/* line 277, main_style.scss */
+/* line 283, main_style.scss */
 .about-sacr .title-sacr .title-bg {
   content: inherit;
   background-color: #fff5f525;
@@ -281,7 +286,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   background-position: 0in -2.5in;
 }
 
-/* line 291, main_style.scss */
+/* line 297, main_style.scss */
 .rig-download-section {
   height: 2in;
   background-color: #333;
@@ -290,15 +295,15 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: #fff5f5;
   display: flex;
 }
-/* line 299, main_style.scss */
+/* line 305, main_style.scss */
 .rig-download-section h1 {
   font-family: PT_Sans;
 }
-/* line 302, main_style.scss */
+/* line 308, main_style.scss */
 .rig-download-section span {
   font-family: "Roboto";
 }
-/* line 306, main_style.scss */
+/* line 312, main_style.scss */
 .rig-download-section .download-lr {
   background-color: transparent;
   border: none;
@@ -329,60 +334,60 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 338, main_style.scss */
+/* line 344, main_style.scss */
 .rig-download-section .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 343, main_style.scss */
+/* line 349, main_style.scss */
 .rig-download-section .download-extra {
   text-decoration: none;
 }
-/* line 346, main_style.scss */
+/* line 352, main_style.scss */
 .rig-download-section .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 350, main_style.scss */
+/* line 356, main_style.scss */
 .rig-download-section .rds-col {
   flex-basis: 50%;
 }
-/* line 353, main_style.scss */
+/* line 359, main_style.scss */
 .rig-download-section .rds-col img {
   position: relative;
   transform: translateY(-15%);
 }
-/* line 358, main_style.scss */
+/* line 364, main_style.scss */
 .rig-download-section .rds-background {
   flex-basis: 25%;
   min-width: 600px;
 }
 
-/* line 366, main_style.scss */
+/* line 372, main_style.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 370, main_style.scss */
+/* line 376, main_style.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 376, main_style.scss */
+/* line 382, main_style.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 381, main_style.scss */
+/* line 387, main_style.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 386, main_style.scss */
+/* line 392, main_style.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
