--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -14,8 +14,9 @@ body {
 	font-family: "Open Sans";
 }
 .links {
-	color: pink;
+	color: white;
 	text-decoration: none;
+	transition: 500ms;
 }
 .links:hover {
 	text-decoration: underline;
