--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -4,7 +4,7 @@ $header-height: 4in;
 $light: #fff5f5;
 $shade: rgba(25, 25, 25, 0.5);
 $nav-border: pink;
-
+// Hello World
 // Universal
 html,
 body {
