--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -22,82 +22,6 @@ body {
 	text-decoration: underline;
 	cursor: pointer;
 }
-// Rig Dropdown
-rigs-dropdown[id="rdp"] {
-	width: 100%;
-	display: flex;
-	position: absolute;
-	z-index: 999;
-
-	height: 0in;
-	overflow: hidden;
-	transition: 500ms;
-	.close-rdp {
-		position: absolute;
-		color: white;
-		font-size: 48px;
-		width: 30px;
-		cursor: pointer;
-		right: -0.2in;
-		opacity: 0;
-
-		transition: 500ms;
-	}
-	.rdp {
-		flex-basis: 50%;
-		background-color: rgba(0, 0, 0, 0.2);
-		background-blend-mode: multiply;
-		transition: 500ms;
-		background-size: 115%;
-
-		.material-icons.md-36 {
-			font-size: 36px;
-		}
-
-		.rdp-title {
-			text-align: center;
-			color: white;
-			font-family: Minecraft;
-			height: 100%;
-		}
-
-		.rdp-title h2 {
-			position: relative;
-			top: 0in;
-			opacity: 0;
-
-			transition: 500ms;
-		}
-
-		.rdp-btn {
-			position: relative;
-			top: 1.2in;
-			width: 150px;
-			border: 3px solid white;
-			margin: 0 auto;
-			padding-top: 10px;
-			padding-bottom: 0px;
-			background-color: rgba(255, 255, 255, 0);
-			transition: 500ms;
-			cursor: pointer;
-			border-radius: 15px;
-		}
-		.rdp-btn:hover {
-			background-color: rgba(255, 255, 255, 1);
-			border-radius: 3px;
-			color: black;
-		}
-
-		.opacity-100 {
-			opacity: 100%;
-		}
-	}
-
-	.rdp:hover {
-		background-color: rgba(0, 0, 0, 0.5);
-		background-size: 125%;
-	}
-}
 
 // Header Stuff
 .header-contain {
@@ -225,21 +149,289 @@ rigs-dropdown[id="rdp"] {
 	}
 }
 
-// Index.html stuff
-.index-content-section {
+// EXTRA SCSS CODE FOR CODEPEN FUNTIONALITY, DO NOT COPY
+html,
+body {
+	margin: 0;
+	width: 100%;
+	height: 100%;
+}
+
+// Copy Code following this
+.content-section {
+	width: 100%;
+	height: auto;
+
 	.about {
+		background-color: white;
 		.title {
-			font-size: 20px;
-		}
-		p {
-			font-size: 14px;
+			padding: 0.5in;
+
+			h1 {
+				font-family: PT_Sans;
+			}
+			p {
+				font-family: "Source Sans Pro", sans-serif;
+			}
 		}
 	}
 
-	.updates {
-		/* Unused Stuff */
-		content: none;
+	$height-tworow: 3.23in;
+
+	.index-rig-display {
+		width: 100%;
+		height: $height-tworow;
+		overflow: hidden;
+		.content {
+			position: relative;
+			z-index: 999;
+			font-family: "Source Sans Pro", sans-serif;
+			transform: translateY(-$height-tworow);
+			text-align: center;
+			background-blend-mode: linear;
+			background-image: linear-gradient(
+				to top,
+				rgba(0, 0, 0, 0.3),
+				rgba(0, 0, 0, 0.1)
+			);
+
+			height: $height-tworow;
+			width: 100%;
+			margin: 0 auto;
+			.rig-display-text {
+				color: white;
+				padding-top: 50px;
+				font-family: PT_Sans;
+
+				padding-bottom: 30px;
+			}
+			//ffb3cb
+			.btn {
+				display: inline-block;
+				color: #fff;
+				cursor: pointer;
+				// display: block;
+				font-size: 16px;
+				font-weight: 400;
+				line-height: 45px;
+				margin: 0 0 2em;
+				max-width: 160px;
+				position: relative;
+				text-decoration: none;
+				text-transform: uppercase;
+				width: 100%;
+
+				//   @media(min-width: 400px) {
+				//     display: inline-block;
+				//     margin-right: 2.5em;
+
+				//     &:nth-of-type(even) {
+				//       margin-right: 0;
+				//     }
+				//   }
+
+				@media (min-width: 600px) {
+					margin: 0 1em 2em;
+
+					//     &:nth-of-type(even) {
+					//       margin-right: 2.5em;
+					//     }
+
+					//     &:nth-of-type(5) {
+					//       margin-right: 0;
+					//     }
+				}
+
+				&:hover {
+					text-decoration: none;
+				}
+			}
+			.btn-4 {
+				border: 1px solid;
+				overflow: hidden;
+				position: relative;
+				transition: 500ms;
+				span {
+					z-index: 20;
+				}
+
+				&:after {
+					background: #fff;
+					content: "";
+					height: 155px;
+					left: -75px;
+					opacity: 0.2;
+					position: absolute;
+					top: -50px;
+					transform: rotate(35deg);
+					transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+					width: 50px;
+					z-index: -10;
+				}
+				&:before {
+					background-color: #ffb3cb00;
+					content: "";
+					height: 155px;
+					left: 0;
+					position: absolute;
+					width: 100%;
+					z-index: -10;
+					transition: 500ms;
+				}
+			}
+
+			.btn-4:hover {
+				color: black;
+				&:after {
+					left: 120%;
+					transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+				}
+				&:before {
+					background-color: #ffb3cb;
+					content: "";
+					height: 155px;
+					left: 0;
+					position: absolute;
+					width: 100%;
+					z-index: -10;
+				}
+			}
+		}
+		.background {
+			width: 100%;
+			margin: 0 auto;
+			z-index: -1;
+			height: $height-tworow;
+			background-position: center;
+			filter: blur(5px);
+			transform: scale(1.1);
+		}
 	}
+}
+.latest-video {
+	height: 4in;
+	.title {
+		text-align: center;
+
+		h1 {
+			font-family: "Open Sans";
+		}
+	}
+	.container {
+		display: flex;
+
+		.col {
+			flex-basis: 50%;
+		}
+		// Individual Elements
+		.video {
+			text-align: center;
+			flex-basis: 700px;
+			iframe {
+				display: inline;
+			}
+		}
+		.meta {
+			h2,
+			h3 {
+				font-family: "PT_sans";
+			}
+			div {
+				font-family: "Noto Sans JP";
+			}
+		}
+	}
+}
+/*
+# Integrate Google Material Icons
+# Website: https://material.io/resources/icons/?style=baseline
+*/
+
+// Begin Footer
+$border-color: rgb(50, 50, 50);
+$footer-row-one-height: 1.25in;
+.footer {
+	.footer-desktop {
+		background-color: rgb(35, 35, 35);
+		color: white;
+		.footer-top-container {
+			display: flex;
+			border-bottom: 2px solid $border-color;
+
+			.left-section {
+				min-width: 160px;
+				border-right: 2.5px solid $border-color;
+				transition: 500ms;
+				text-align: left;
+				flex-basis: 50%;
+				height: $footer-row-one-height;
+
+				div {
+					padding-top: 12px;
+					padding-left: 30px;
+					list-style-type: none;
+				}
+			}
+			.right-section {
+				padding-left: 2.5px;
+				transition: 500ms;
+				min-width: 160px;
+				flex-basis: 50%;
+				border-left: 2px solid $border-color;
+				position: relative;
+				text-align: right;
+				height: $footer-row-one-height;
+				.footer-icon {
+					padding-top: 10px;
+					padding-right: 30px;
+					.fab {
+						font-size: 23px;
+					}
+				}
+			}
+		}
+		.footer-bottom-container {
+			text-align: center;
+		}
+	}
+}
+
+
+// Specialty Links
+.yt-links-thick {
+	color: black;
+	transition: 250ms;
+	text-decoration: none;
+	border-bottom: 4px solid rgba(255, 0, 0, 0);
+}
+.yt-links-thick:hover {
+	color: red;
+	cursor: pointer;
+	border-bottom: 4px solid rgba(255, 0, 0, 1);
+}
+.yt-links-thin {
+	color: black;
+	transition: 250ms;
+	text-decoration: none;
+	border-bottom: 2px solid rgba(255, 0, 0, 0);
+}
+
+.yt-links-thin:hover {
+	color: red;
+	cursor: pointer;
+	border-bottom: 2px solid rgba(255, 0, 0, 1);
+}
+.sildeer-link {
+	color: black;
+	transition: 250ms;
+	text-decoration: none;
+	border-bottom: 2px solid rgba(20, 230, 255, 0);
+}
+
+.sildeer-link:hover {
+	color: rgba(20, 230, 255, 1);
+	cursor: pointer;
+	border-bottom: 2px solid rgba(20, 230, 255, 1);
 }
 
 // sacr-rig.html and slacme-rig.html stuff
