Added External Sheets to main_style.css

--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -1,4 +1,6 @@
 @import url("../fonts/fonts.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 $header-height: 4in;
 $light: #fff5f5;
