--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -411,14 +411,14 @@ body {
   color: black;
   transition: 250ms;
   text-decoration: none;
-  border-bottom: 2px solid rgba(20, 230, 255, 0);
+  border-bottom: 2px solid #adf6ff00;
 }
 
 /* line 462, main_style.scss */
 .sildeer-link:hover {
-  color: #14e6ff;
+  color: #adf6ff;
   cursor: pointer;
-  border-bottom: 2px solid #14e6ff;
+  border-bottom: 2px solid;
 }
 
 /* line 471, main_style.scss */
