--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -456,13 +456,13 @@ $footer-row-one-height: 1.25in;
     color: black;
     transition: 250ms;
     text-decoration: none;
-    border-bottom: 2px solid rgba(20, 230, 255, 0);
+    border-bottom: 2px solid #adf6ff00;
 }
 
 .sildeer-link:hover {
-    color: rgba(20, 230, 255, 1);
+    color: #adf6ff;
     cursor: pointer;
-    border-bottom: 2px solid rgba(20, 230, 255, 1);
+    border-bottom: 2px solid;
 }
 
 // sacr-rig.html and slacme-rig.html stuff
