--- a/assets/styles/main_style.scss
+++ b/assets/styles/main_style.scss
@@ -1,8 +1,14 @@
 @import url("../fonts/fonts.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("bootstrap-integration.css");
 
-$header-height: 4in;
+:root {
+    --nav-active: #FCB5DE;
+    --font-family: "PT_Sans"
+}
+
+$header-height: 5in;
 $light: #fff5f5;
 $shade: rgba(25, 25, 25, 0.5);
 $nav-border: pink;
@@ -10,12 +16,190 @@ $nav-border: pink;
 // Times Formatted: 1
 
 // Universal
-html,
 body {
     margin: 0;
-    width: 100%;
+    font-family: var(--font-family);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     height: 100%;
-    font-family: "Open Sans";
+    width: 100%;
+
+    .viewport {
+        transition: 0.5s;
+    }
+
+    .sideNav {
+        height: 100%;
+        width: 0px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        padding-top: 60px;
+        transition: 0.5s;
+        font-family: minecraftia;
+
+        .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+            font-family: "PT_Sans";
+            border-bottom: 0px;
+        }
+
+        a {
+            padding: 8px 8px 0px 32px;
+            text-decoration: none;
+            font-size: 16px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+            cursor: pointer;
+            border-bottom: 2px solid #555555;
+
+            &:hover {
+                color: #f1f1f1;
+            }
+        }
+
+        .active {
+            color: #FCB5DE;
+        }
+
+
+    }
+}
+
+.above-nav {
+    background-color: #222;
+    color: white;
+
+    .logo {
+        color: white;
+        display: inline-block;
+        padding: 0.5rem 1rem;
+        width: 100px;
+        text-align: center;
+        box-shadow: 0px 0 inset #222;
+        background-color: #292929;
+        text-decoration: none;
+        transition: 200ms;
+        text-indent: 0in;
+
+        span {
+            pointer-events: none;
+        }
+    }
+
+    .xmasCounter {
+        color: white;
+        float: right;
+        display: inline;
+        padding: 0.5rem 1rem;
+        width: auto;
+        text-align: center;
+        box-shadow: 0px 0 inset #222;
+        background-color: #28d411;
+        text-decoration: none;
+        transition: 200ms;
+        text-indent: 0in;
+
+        span {
+            pointer-events: none;
+        }
+    }
+
+    .info {
+        display: inline-block;
+        padding-left: 1em;
+    }
+}
+
+.nav {
+    background-color: #242424; // Sets the background of the Navigation to a dark Grey
+
+    .nav-link {
+        width: 100px;
+        text-align: center;
+        color: white;
+        cursor: pointer;
+        box-shadow: 0 0 0 0px inset var(--nav-active);
+        transition-property: all;
+
+        &:hover {
+            color: black;
+            box-shadow: 0 -3em inset var(--nav-active);
+        }
+
+    }
+
+
+    .disabled {
+        color: grey;
+        text-decoration: line-through;
+        border-bottom: 4px solid #F10000;
+        box-shadow: none;
+
+        &:hover {
+            box-shadow: 0 -3em inset #F10000;
+        }
+    }
+
+    .active {
+        color: var(--nav-active);
+        border-bottom: 4px solid var(--nav-active);
+        box-shadow: none;
+
+        &:hover {
+            box-shadow: 0 -3em inset var(--nav-active);
+            color: black;
+        }
+    }
+
+}
+
+/* 
+
+*/
+
+// Header Content
+.header-contain {
+    width: 100%;
+    height: $header-height;
+    background-size: cover;
+    background-position: center;
+
+    .header-content {
+        background-image: url('https://sakura-sedaia.com/assets/images/WPRenders/BarSet_Preview4.png');
+        background-size: cover;
+
+        .header-text {
+            position: absolute;
+            transform: translateY(1.5in);
+
+            h1 {
+                font-family: PT_Sans;
+                font-weight: bold;
+                color: $light;
+                text-indent: 1in;
+            }
+
+            h4 {
+                color: $light;
+                font-family: Minecraft;
+                text-indent: 0.75in;
+            }
+        }
+    }
 }
 
 .links {
@@ -30,119 +214,7 @@ body {
 }
 
 // Header Stuff
-.header-contain {
-    width: 100%;
-    height: $header-height;
-    background-size: cover;
 
-    // Navigation
-    .navigation {
-        height: 32px;
-        display: flex;
-
-        // Navigation Logo Stuffs
-        .nav-logo {
-            display: flex;
-            flex-basis: 50%;
-            min-width: 200px;
-            height: 47px;
-            position: absolute;
-
-            .logoIco {
-                width: 47px;
-                content: url("https://sakura-sedaia.com/assets/images/Favicon/favicon-32x32.png");
-            }
-
-            .logoTxt {
-                padding-left: 10px;
-                overflow-y: hidden;
-                padding-top: 10px;
-                height: 36px;
-                color: $light;
-                font-family: Minecraft;
-                position: relative;
-                transform: translatex(10px);
-                border-right: 3px solid $nav-border;
-                padding-right: 20px;
-                width: 140px;
-
-                span {
-                    position: absolute;
-                    transform: translateY(2px);
-                }
-            }
-        }
-
-        // Navbar Styles
-        .nav-contain {
-            display: flex;
-            width: 50vw;
-            height: 100%;
-            right: 0;
-
-            position: absolute;
-
-            // Navigational Items
-            .nav-item {
-                flex-basis: 25%;
-                border-bottom: 5px solid rgba(255, 255, 255, 0);
-                overflow-y: hidden;
-                height: 32px;
-                padding-top: 10px;
-                background-color: rgba(0, 0, 0, 0);
-                text-align: center;
-                color: $light;
-                transition: 500ms;
-                cursor: pointer;
-                font-family: "Noto Sans JP";
-                font-size: 16px;
-            }
-
-            .nav-item[active="true"] {
-                border-bottom: 5px solid;
-                background-color: rgba(255, 255, 255, 1);
-                color: black;
-                border-color: $nav-border;
-            }
-
-            .nav-item:hover {
-                border-bottom: 5px solid $nav-border;
-                flex-basis: 25%;
-                overflow-y: hidden;
-                padding-top: 10px;
-                background-color: $shade;
-            }
-
-            // End Navigational Items
-        }
-    }
-
-    // Header Content
-    .header-text {
-        position: absolute;
-        transform: translateY(1in);
-
-        h1 {
-            font-family: PT_Sans;
-            font-weight: bold;
-            color: $light;
-            text-indent: 1in;
-        }
-
-        h4 {
-            color: $light;
-            font-family: Minecraft;
-            text-indent: 0.75in;
-        }
-    }
-}
-
-.xmasCounter {
-    border-top: 2px solid grey;
-    border-bottom: 2px solid grey;
-    padding: 10px;
-    background-color: rgba(223, 223, 223, 1.00);
-}
 
 
 
@@ -463,348 +535,4 @@ $footer-row-one-height: 1.25in;
     color: #adf6ff;
     cursor: pointer;
     border-bottom: 2px solid;
-}
-
-// sacr-rig.html and slacme-rig.html stuff
-// About the Rig
-.about-sacr {
-    .title-sacr {
-        width: 100%;
-        height: 100%;
-
-        .title-text {
-            position: absolute;
-            z-index: 0;
-            padding-left: 30px;
-            padding-right: 30px;
-            transform: translate(1in, 2in);
-            border-radius: 10px;
-            background-color: #00000090;
-
-            h1 {
-                font-family: PT_Sans;
-                text-indent: 1in;
-                color: white;
-            }
-
-            h3 {
-                font-family: Minecraft;
-                font-size: 16px;
-
-                color: white;
-            }
-        }
-
-        .title-bg {
-            content: inherit;
-            background-color: #fff5f525;
-            background-blend-mode: overlay;
-            width: 100%;
-            height: 5.25in;
-            z-index: -1;
-            overflow: hidden;
-            background-position: 0in -2.5in;
-        }
-    }
-}
-
-// Download Features
-.rig-download-section {
-    height: 2in;
-    background-color: #333;
-    text-align: center;
-    padding: 1in;
-    color: #fff5f5;
-    display: flex;
-
-    h1 {
-        font-family: PT_Sans;
-    }
-
-    span {
-        font-family: "Roboto";
-    }
-
-    .download-lr {
-        background-color: transparent;
-        border: none;
-        border-radius: 0.3rem;
-        -webkit-box-shadow: inset 0 0 0 2px #fff;
-        box-shadow: inset 0 0 0 2px #fff;
-        color: #fff !important;
-        display: block;
-        padding-bottom: 7px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 7px;
-        text-decoration: none !important;
-        -webkit-transition: color 250ms ease-out, background-color 150ms ease-in-out,
-            -webkit-box-shadow 150ms ease-in-out;
-        transition: color 250ms ease-out, background-color 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
-        -o-transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
-        transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out;
-        transition: color 250ms ease-out, background-color 150ms ease-in-out, box-shadow 150ms ease-in-out,
-            -webkit-box-shadow 150ms ease-in-out;
-        white-space: nowrap;
-        background-color: #13b6fb;
-        -webkit-box-shadow: 0 4px 0 0 #04a7eb;
-        box-shadow: 0 4px 0 0 #04a7eb;
-        font-size: 1.5rem;
-        width: 250px;
-        margin: 0 auto;
-        margin-top: 20px;
-        margin-bottom: 10px;
-        font-family: PT_Sans;
-        cursor: pointer;
-    }
-
-    .download-lr:hover {
-        background-color: #13b6fb95;
-        -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
-        box-shadow: 0 4px 0 0 #04a7eb95;
-    }
-
-    .download-extra {
-        text-decoration: none;
-    }
-
-    .download-extra:hover {
-        text-decoration: underline;
-        cursor: pointer;
-    }
-
-    .rds-col {
-        flex-basis: 50%;
-
-        img {
-            position: relative;
-            transform: translateY(-15%);
-        }
-    }
-
-    .rds-background {
-        flex-basis: 25%;
-        min-width: 600px;
-    }
-
-}
-
-// Highlight Features
-.features-sacr {
-    margin-left: 1in;
-    margin-right: 1in;
-
-    h2 {
-        font-family: PT_Sans;
-        text-align: center;
-        font-size: 36px;
-    }
-
-    .highlight-features {
-        width: 1000px;
-        margin: 0 auto;
-        background-color: #f3f3f3;
-        padding: 10px;
-
-        h2 {
-            text-align: left;
-            font-size: 24px;
-        }
-
-        .row-1-col {
-            .feat-overlay {
-                font-family: "Noto Sans JP";
-                height: 100px;
-            }
-        }
-    }
-}
-
-// Rig Navigation Stuffs
-$rig-nav-border-radius: 10px;
-$sacr-hover: rgb(255, 180, 200);
-$slacme-hover: rgb(0, 180, 200);
-$transition-duration: 250ms;
-$sacrBackgroundImage: url("https://sakura-sedaia.com/assets/images/MCRigBackgrouns/SACRThumbnail3.PNG");
-$slacmeBackgroundImage: url("https://sakura-sedaia.com/assets/images/MCRigBackgrouns/LACMThumbnail1.PNG");
-$browserBackground: url("https://sakura-sedaia.com/assets/images/MCRigBackgrouns/OreBackground.png");
-
-// Default Desktop Style for the Card based Navigation
-.cards-container {
-    text-align: center;
-    background-image: $browserBackground;
-    padding: 1in;
-    transition: $transition-duration;
-
-    .cards-list-item-outer {
-        display: inline-block;
-
-        position: relative;
-
-        .cards-list-item-inner {
-            // Actual Card CSS
-            cursor: pointer;
-            transition: $transition-duration;
-            background-color: rgba(25, 25, 25, 0.5);
-            color: white;
-            width: 400px;
-            font-family: PT_Sans;
-            border-radius: $rig-nav-border-radius;
-
-            .cards-list-item-thumbnail {
-                width: 400px;
-                height: 225px;
-
-                transition: $transition-duration;
-                margin-bottom: 20px;
-                border-bottom: 4px solid;
-                border-top-right-radius: $rig-nav-border-radius;
-                border-top-left-radius: $rig-nav-border-radius;
-            }
-
-            .sacr-thumbnail {
-                background-image: $sacrBackgroundImage;
-                background-size: cover;
-                background-position: center;
-                border-color: white;
-                transition: $transition-duration;
-            }
-
-            .slacme-thumbnail {
-                background-image: $slacmeBackgroundImage;
-                background-size: cover;
-                background-position: center;
-                border-color: white;
-                transition: $transition-duration;
-            }
-
-            .cards-list-item-info {
-                position: relative;
-                text-align: center;
-                height: 160px;
-
-                .cards-list-item-title {
-                    font-size: 20pt;
-                    transition: $transition-duration;
-                }
-
-                .cards-list-item-excerp {
-                    font-size: 12pt;
-
-                    .links {
-                        transition: $transition-duration;
-                    }
-                }
-            }
-        }
-
-        .cards-list-item-inner:hover {
-            background-color: rgba(0, 0, 0, 0.7);
-
-            // Set Color of Thumbnail Border
-            .sacr-thumbnail {
-                border-bottom-color: $sacr-hover;
-            }
-
-            .slacme-thumbnail {
-                border-bottom-color: $slacme-hover;
-            }
-
-            // Set Color of Title Text
-            .sacr-title {
-                color: $sacr-hover;
-            }
-
-            .slacme-title {
-                color: $slacme-hover;
-            }
-
-            // Set Color of Links
-            .sacr-link {
-                color: $sacr-hover;
-            }
-
-            .slacme-link {
-                color: $slacme-hover;
-            }
-        }
-
-        // Define backgrounds for Mobile Layout
-        .sacr-background::before {
-            content: "";
-            background-image: $sacrBackgroundImage;
-            background-position: center;
-            background-size: cover;
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            bottom: 0px;
-            left: 0px;
-            opacity: 0%;
-            transition: $transition-duration;
-        }
-
-        .slacme-background::before {
-            content: "";
-            background-image: $slacmeBackgroundImage;
-            background-position: center;
-            background-size: cover;
-            position: absolute;
-            top: 0px;
-            right: 0px;
-            bottom: 0px;
-            left: 0px;
-            opacity: 0%;
-            transition: $transition-duration;
-        }
-    }
-}
-
-
-// Start Mobile Layout
-@media screen and (max-width: 500px) {
-    .cards-container {
-        padding: 0;
-        width: 100%;
-
-        .cards-list-item-outer {
-            display: block;
-
-            .cards-list-item-inner {
-                width: 100%;
-                border-radius: 0;
-                background-blend-mode: multiply;
-
-                .cards-list-item-thumbnail {
-                    border-bottom: 0px solid white;
-                    height: 10px;
-                    width: 100%;
-                }
-
-                .sacr-thumbnail {
-                    opacity: 0%;
-                }
-
-                .slacme-thumbnail {
-                    opacity: 0%;
-                }
-            }
-
-            // Rig Backgrounds
-            .sacr-background::before {
-                background-image: $sacrBackgroundImage;
-                background-position: center;
-                background-size: cover;
-
-                opacity: 100%;
-            }
-
-            .slacme-background::before {
-                background-image: $slacmeBackgroundImage;
-                background-position: center;
-                background-size: cover;
-                opacity: 100%;
-            }
-        }
-    }
 }
